# tmux-remote

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  Makefile  README.md  SPEC.md
.github/workflows/: release.yaml
agent/: CMakeLists.txt
agent/src/: main.c  nabtoshell.h  nabtoshell_ansi_stripper.c  nabtoshell_ansi_stripper.h  nabtoshell_banner.c  nabtoshell_banner.h  nabtoshell_coap_attach.c  nabtoshell_coap_create.c  nabtoshell_coap_handler.c  nabtoshell_coap_handler.h  nabtoshell_coap_resize.c  nabtoshell_coap_sessions.c  nabtoshell_coap_status.c  nabtoshell_control_stream.c  nabtoshell_control_stream.h  nabtoshell_device.c  nabtoshell_device.h  nabtoshell_iam.c  nabtoshell_iam.h  nabtoshell_init.c  nabtoshell_init.h  nabtoshell_pattern_cbor.h  nabtoshell_pattern_config.c  nabtoshell_pattern_config.h  nabtoshell_pattern_engine.c  nabtoshell_pattern_engine.h  nabtoshell_pattern_matcher.c  nabtoshell_pattern_matcher.h  nabtoshell_prompt.c  nabtoshell_prompt.h  nabtoshell_prompt_detector.c  nabtoshell_prompt_detector.h  nabtoshell_prompt_lifecycle.c  nabtoshell_prompt_lifecycle.h  nabtoshell_prompt_protocol.c  nabtoshell_prompt_protocol.h  nabtoshell_prompt_rules.c  nabtoshell_prompt_rules.h  nabtoshell_rolling_buffer.c  nabtoshell_rolling_buffer.h  (+16 more)
agent/tests/: test_ansi_stripper.c  test_pattern_config.c  test_pattern_engine.c  test_pattern_matcher.c  test_prompt_config.c  test_prompt_detector_replay.c  test_prompt_lifecycle.c  test_prompt_protocol.c  test_prompt_rules.c  test_pty_replay.c  test_terminal_state.c
agent/tests/fixtures/: patterns.json  pty-log-1.ptyr  pty-log-15.ptyr  pty-log-2.ptyr  pty-log-3.ptyr  pty-log-4.ptyr
clients/cli/: CMakeLists.txt
clients/cli/src/: main.c  nabtoshell_attach.c  nabtoshell_attach.h  nabtoshell_client.h  nabtoshell_client_coap.c  nabtoshell_client_coap.h  nabtoshell_client_config.c  nabtoshell_client_config.h  nabtoshell_client_util.c  nabtoshell_client_util.h  nabtoshell_connect.c  nabtoshell_connect.h  nabtoshell_devices.c  nabtoshell_devices.h  nabtoshell_pair.c  nabtoshell_pair.h  nabtoshell_rename.c  nabtoshell_rename.h  nabtoshell_sessions.c  nabtoshell_sessions.h  tmuxremote_attach.c  tmuxremote_client_config.c  tmuxremote_client_log.c  tmuxremote_client_log.h  tmuxremote_devices.c  tmuxremote_pair.c  tmuxremote_rename.c  tmuxremote_sessions.c
clients/ios/: Debug.xcconfig  DeveloperSettings.xcconfig.example  Release.xcconfig  TestsDebug.xcconfig  TestsRelease.xcconfig  project.yml
clients/ios/NabtoShell/App/: AppState.swift  RootView.swift
clients/ios/NabtoShell/Models/: SessionInfo.swift
clients/ios/NabtoShell/Patterns/: PatternConfig.swift  PatternConfigLoader.swift  PatternEngine.swift  PatternMatch.swift
clients/ios/NabtoShell/Resources/: patterns.json
clients/ios/NabtoShell/Services/: AppLog.swift  BookmarkStore.swift  CBORHelpers.swift  ConnectionManager.swift  NabtoService.swift  StubNabtoService.swift  StubScript.swift
clients/ios/NabtoShell/Views/: DeviceListView.swift  KeyboardAccessoryView.swift  PatternOverlayView.swift  TerminalScreen.swift  TerminalViewWrapper.swift
clients/ios/NabtoShellTests/: NabtoServiceDisconnectTests.swift  PatternConfigTests.swift  PatternEngineTests.swift
clients/ios/NabtoShellUITests/: NabtoShellUITests.swift  PatternOverlayUITests.swift
clients/ios/TmuxRemote.xcodeproj/: project.pbxproj
clients/ios/TmuxRemote/App/: RootView.swift
clients/ios/TmuxRemote/Services/: ConnectionManager.swift  NabtoService.swift
clients/ios/TmuxRemote/Views/: DeviceListView.swift  TerminalScreen.swift
skills/ptyr-debug/: SKILL.md
skills/ptyr-debug/agents/: openai.yaml
skills/ptyr-debug/references/: prompt-normalization.md
tests/: conftest.py  helpers.py  test_config.json.example  test_connect.py  test_create_session.py  test_devices.py  test_init.py  test_pair.py  test_resize.py  test_security.py  test_sessions.py  test_user_management.py
tests/offline/: test_init.py  test_user_management.py
tests/online/: conftest.py  test_connect.py  test_create_session.py  test_devices.py  test_pair.py  test_resize.py  test_security.py  test_sessions.py
